--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <button class="rate">4</button>
       <button class="rate">5</button>
     </div>
+    <div class="btn">
+      <button class="submit" type="submit">Submit</button>
+    </div>
   </main>
 </body>
 </html>
