--- a/index.html
+++ b/index.html
@@ -10,23 +10,42 @@
 </head>
 <body>
   <main>
-    <div class="star-icon">
-      <img src="assets/images/icon-star.svg" alt="Star icon">
+    <div class="one" id="screen1">
+      <div class="star-icon ">
+        <img src="assets/images/icon-star.svg" alt="Star icon">
+      </div>
+      <h1>How did we do?</h1>
+      <div class="description">
+        <p>Please let us know how we did with your support request. All feedback is appreeciated to help us improve our offering!</p>
+      </div>
+      <div class="classifications">
+        <button name="1" id="1" class="rate" value="1" type="text" onclick="verNome(this.name)">1</button>
+        <button name="2" id="2" class="rate" value="2" type="text" onclick="verNome(this.name)">2</button>
+        <button name="3" id="3" class="rate" value="3" type="text" onclick="verNome(this.name)">3</button>
+        <button name="4" id="4" class="rate" value="4" type="text" onclick="verNome(this.name)">4</button>
+        <button name="5" id="5" class="rate" value="5" type="text" onclick="verNome(this.name)">5</button>
+      </div>
+      <div class="btn">
+        <button id="submit" class="submit" type="submit" onclick="tradeScreen()">Submit</button>
+      </div>
     </div>
-    <h1>How did we do?</h1>
-    <div class="description">
-      <p>Please let us know how we did with your support request. All feedback is appreeciated to help us improve our offering!</p>
-    </div>
-    <div class="classifications">
-      <button class="rate">1</button>
-      <button class="rate">2</button>
-      <button class="rate">3</button>
-      <button class="rate">4</button>
-      <button class="rate">5</button>
-    </div>
-    <div class="btn">
-      <button class="submit" type="submit">Submit</button>
+
+    <div class="two" id="screen2">
+      <div class="icon">
+        <img src="assets/images/illustration-thank-you.svg" alt="Icon of thank you">
+      </div>
+      <div class="boxToSelect">
+        <p class="boxOrange">
+          <span id="numberShow" class="selected"></span></p>
+         <h2 class="alignment thx">Thank you!</h2>
+         <p class="alignment toText">
+          We appreciate you taking the time to give a rating.
+          If you ever need more support, don't hesitate to
+          get in touch!
+         </p>
+      </div>
     </div>
   </main>
+  <script src="assets/js/style.js"></script>
 </body>
 </html>
