:ok_hand: refactor: changes on pixels

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   <title>Rating card</title>
 </head>
@@ -36,13 +37,14 @@
       </div>
       <div class="boxToSelect">
         <p class="boxOrange">
-          <span id="numberShow" class="selected"></span></p>
-         <h2 class="alignment thx">Thank you!</h2>
-         <p class="alignment toText">
+          <span id="numberShow" class="selected"></span>
+        </p>
+        <h2 class="alignment thx">Thank you!</h2>
+        <p class="alignment toText">
           We appreciate you taking the time to give a rating.
           If you ever need more support, don't hesitate to
           get in touch!
-         </p>
+        </p>
       </div>
     </div>
   </main>
